force-app/main/default/objects/Medical_Diagnosis__c/Medical_Diagnosis__c.object-meta.xml
<CustomObject>
    <label>Nutrition History</label>
    <nameField>
        <displayFormat>MD-{000000000}</displayFormat>
        <label>Nutrition History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nutrition Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>