force-app/main/default/objects/Medical_Diagnosis__c/fields/Are_You_On_Insulin__c.field-meta.xml
<CustomField>
    <fullName>Are_You_On_Insulin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are You On Insulin</label>
    <type>Checkbox</type>
</CustomField>