force-app/main/default/objects/Medical_Diagnosis__c/fields/BloodGlucose__c.field-meta.xml
<CustomField>
    <fullName>BloodGlucose__c</fullName>
    <label>Blood Glucose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Blood_Glucose</valueSetName>
    </valueSet>
</CustomField>