force-app/main/default/objects/Medical_Diagnosis__c/fields/BloodGlucoseValues__c.field-meta.xml
<CustomField>
    <fullName>BloodGlucoseValues__c</fullName>
    <label>Blood Glucose Values</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>