force-app/main/default/objects/Medical_Diagnosis__c/fields/BloodSugarfluctuations__c.field-meta.xml
<CustomField>
    <fullName>BloodSugarfluctuations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blood Sugar fluctuations</label>
    <type>Checkbox</type>
</CustomField>