force-app/main/default/objects/Medical_Diagnosis__c/fields/BloodSugarLevels__c.field-meta.xml
<CustomField>
    <fullName>BloodSugarLevels__c</fullName>
    <label>Blood Sugar Levels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>