force-app/main/default/objects/Medical_Diagnosis__c/fields/BMI_Percentile__c.field-meta.xml
<CustomField>
    <fullName>BMI_Percentile__c</fullName>
    <label>BMI Percentile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Below 3rd Percentile</fullName>
            </value>
            <value>
                <fullName>3rd to 15th Percentile</fullName>
            </value>
            <value>
                <fullName>15th to 50th Percentile</fullName>
            </value>
            <value>
                <fullName>50th to 85th Percentile</fullName>
            </value>
            <value>
                <fullName>85th to 97th Percentile</fullName>
            </value>
            <value>
                <fullName>Above 97th Percentile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>