force-app/main/default/objects/Medical_Diagnosis__c/fields/BMI_Result__c.field-meta.xml
<CustomField>
    <fullName>BMI_Result__c</fullName>
    <label>BMI Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stunted</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>