force-app/main/default/objects/Medical_Diagnosis__c/fields/BodyMassIndexBMI__c.field-meta.xml
<CustomField>
    <fullName>BodyMassIndexBMI__c</fullName>
    <formula>(Weight__c) / (( Height__c/100 )^2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Body Mass Index (BMI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>