force-app/main/default/objects/Medical_Diagnosis__c/fields/BrandMFD__c.field-meta.xml
<CustomField>
    <fullName>BrandMFD__c</fullName>
    <label>Brand MFD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>