force-app/main/default/objects/Medical_Diagnosis__c/fields/Calcium_mg__c.field-meta.xml
<CustomField>
    <fullName>Calcium_mg__c</fullName>
    <label>Calcium (mg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>