force-app/main/default/objects/Medical_Diagnosis__c/fields/Carbs__c.field-meta.xml
<CustomField>
    <fullName>Carbs__c</fullName>
    <label>Carbs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>