force-app/main/default/objects/Medical_Diagnosis__c/fields/CerealsIdealdayintake__c.field-meta.xml
<CustomField>
    <fullName>CerealsIdealdayintake__c</fullName>
    <label>Cereals Ideal/day intake</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>