force-app/main/default/objects/Medical_Diagnosis__c/fields/ChairTestScore__c.field-meta.xml
<CustomField>
    <fullName>ChairTestScore__c</fullName>
    <label>ChairTestScore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>