force-app/main/default/objects/Medical_Diagnosis__c/fields/Child_Fussy_Eater__c.field-meta.xml
<CustomField>
    <fullName>Child_Fussy_Eater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Fussy Eater</label>
    <type>Checkbox</type>
</CustomField>