force-app/main/default/objects/Medical_Diagnosis__c/fields/Child_Shorter__c.field-meta.xml
<CustomField>
    <fullName>Child_Shorter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Shorter</label>
    <type>Checkbox</type>
</CustomField>