force-app/main/default/objects/Medical_Diagnosis__c/fields/Child_Weight_Result__c.field-meta.xml
<CustomField>
    <fullName>Child_Weight_Result__c</fullName>
    <label>Child Weight Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Underweight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>