force-app/main/default/objects/Medical_Diagnosis__c/fields/Childfacingproblem__c.field-meta.xml
<CustomField>
    <fullName>Childfacingproblem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Childfacingproblem</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Nutrition Histories (Childfacingproblem)</relationshipLabel>
    <relationshipName>Nutrition_Histories3</relationshipName>
    <type>Lookup</type>
</CustomField>