force-app/main/default/objects/Medical_Diagnosis__c/fields/ChildFeedingConcern__c.field-meta.xml
<CustomField>
    <fullName>ChildFeedingConcern__c</fullName>
    <label>Child Feeding Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes Picky Eater</fullName>
            </value>
            <value>
                <fullName>Yes Poor Appetite</fullName>
            </value>
            <value>
                <fullName>Yes Junk Foods</fullName>
            </value>
            <value>
                <fullName>All of the Above</fullName>
            </value>
            <value>
                <fullName>No Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>