force-app/main/default/objects/Medical_Diagnosis__c/fields/ChildHeightConcern__c.field-meta.xml
<CustomField>
    <fullName>ChildHeightConcern__c</fullName>
    <label>Child Height Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Height Concern</fullName>
            </value>
            <value>
                <fullName>Smaller than Peers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>