force-app/main/default/objects/Medical_Diagnosis__c/fields/ChildNutritionalIntake__c.field-meta.xml
<CustomField>
    <fullName>ChildNutritionalIntake__c</fullName>
    <label>Child Nutritional Intake</label>
    <type>TextArea</type>
</CustomField>