force-app/main/default/objects/Medical_Diagnosis__c/fields/ChildWeightConcern__c.field-meta.xml
<CustomField>
    <fullName>ChildWeightConcern__c</fullName>
    <label>Child Weight Concern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Weight Concern</fullName>
            </value>
            <value>
                <fullName>Is Underweight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>