force-app/main/default/objects/Medical_Diagnosis__c/fields/ChronicDisease__c.field-meta.xml
<CustomField>
    <fullName>ChronicDisease__c</fullName>
    <label>Chronic Disease</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Addison&apos;s disease</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Bipolar Mood Disorder</fullName>
            </value>
            <value>
                <fullName>Bronchiectasis</fullName>
            </value>
            <value>
                <fullName>Cardiac failure</fullName>
            </value>
            <value>
                <fullName>Cardiomyopathy</fullName>
            </value>
            <value>
                <fullName>Chronic obstructive pulmonary disorder</fullName>
            </value>
            <value>
                <fullName>Chronic renal disease</fullName>
            </value>
            <value>
                <fullName>Coronary artery disease</fullName>
            </value>
            <value>
                <fullName>Crohn&apos;s disease</fullName>
            </value>
            <value>
                <fullName>Diabetes insipidus</fullName>
            </value>
            <value>
                <fullName>Diabetes mellitus types 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Dysrhythmias</fullName>
            </value>
            <value>
                <fullName>Epilepsy</fullName>
            </value>
            <value>
                <fullName>Glaucoma</fullName>
            </value>
            <value>
                <fullName>Haemophilia</fullName>
            </value>
            <value>
                <fullName>Hyperlipidaemia</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Hypothyroidism</fullName>
            </value>
            <value>
                <fullName>Multiple sclerosis</fullName>
            </value>
            <value>
                <fullName>Parkinson&apos;s disease</fullName>
            </value>
            <value>
                <fullName>Rheumatoid arthritis</fullName>
            </value>
            <value>
                <fullName>Schizophrenia</fullName>
            </value>
            <value>
                <fullName>Systemic lupus erythematosus</fullName>
            </value>
            <value>
                <fullName>Ulcerative colitis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>