force-app/main/default/objects/Medical_Diagnosis__c/fields/Climb_up_3_floors__c.field-meta.xml
<CustomField>
    <fullName>Climb_up_3_floors__c</fullName>
    <label>Climb up 3 floors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, easily</fullName>
            </value>
            <value>
                <fullName>Yes, with some difficulty</fullName>
            </value>
            <value>
                <fullName>Yes, with great difficulty</fullName>
            </value>
            <value>
                <fullName>No, not at all</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>