force-app/main/default/objects/Medical_Diagnosis__c/fields/Common_Cold_in_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Common_Cold_in_Last_12_Months__c</fullName>
    <label>Common Cold in Last 12 Months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Regularly</fullName>
            </value>
            <value>
                <fullName>Often</fullName>
            </value>
            <value>
                <fullName>Always (Almost)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>