force-app/main/default/objects/Medical_Diagnosis__c/fields/Consume_Dairy_Products__c.field-meta.xml
<CustomField>
    <fullName>Consume_Dairy_Products__c</fullName>
    <description>Consumption of milk/ curd/ cheese/ yogurt /cottage cheese or paneer</description>
    <label>Consume Dairy Products</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, more than one product, twice a day</fullName>
            </value>
            <value>
                <fullName>Yes, one product, twice a day</fullName>
            </value>
            <value>
                <fullName>Yes, more than one product, once a day</fullName>
            </value>
            <value>
                <fullName>Yes, one product, once a day</fullName>
            </value>
            <value>
                <fullName>Sometimes in a week</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>No not all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>