force-app/main/default/objects/Medical_Diagnosis__c/fields/Consume_Non_Vegetarian__c.field-meta.xml
<CustomField>
    <fullName>Consume_Non_Vegetarian__c</fullName>
    <inlineHelpText>Consumption of egg/chicken/fish/mutton/meat/pork/beef</inlineHelpText>
    <label>Consume Non-Vegetarian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, more than one product, twice a day</fullName>
            </value>
            <value>
                <fullName>Yes, one product, twice a day</fullName>
            </value>
            <value>
                <fullName>Yes, more than one product, once a day</fullName>
            </value>
            <value>
                <fullName>Yes, one product, once a day</fullName>
            </value>
            <value>
                <fullName>Sometimes in a week</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>No not all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>