force-app/main/default/objects/Medical_Diagnosis__c/fields/Consume_protein_supplement__c.field-meta.xml
<CustomField>
    <fullName>Consume_protein_supplement__c</fullName>
    <label>Consume protein supplement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, twice everyday</fullName>
            </value>
            <value>
                <fullName>Yes, once everyday</fullName>
            </value>
            <value>
                <fullName>Sometimes in a week</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Occasionally</fullName>
            </value>
            <value>
                <fullName>No not all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>