force-app/main/default/objects/Medical_Diagnosis__c/fields/CreatedforIntegration__c.field-meta.xml
<CustomField>
    <fullName>CreatedforIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created for Integration</label>
    <type>Checkbox</type>
</CustomField>