force-app/main/default/objects/Medical_Diagnosis__c/fields/Current_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Current_Treatment__c</fullName>
    <label>Current Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemotherapy</fullName>
            </value>
            <value>
                <fullName>Diet &amp; Insulin</fullName>
            </value>
            <value>
                <fullName>Diet &amp; Oral medication</fullName>
            </value>
            <value>
                <fullName>Diet Control</fullName>
            </value>
            <value>
                <fullName>Medication &amp; Insulin</fullName>
            </value>
            <value>
                <fullName>Medication only</fullName>
            </value>
            <value>
                <fullName>Radiotherapy</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>