force-app/main/default/objects/Medical_Diagnosis__c/fields/Customer_Purchased_From_Store__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchased_From_Store__c</fullName>
    <description>Has the customer purchased from the store?</description>
    <label>Customer Purchased From Store</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>