force-app/main/default/objects/Medical_Diagnosis__c/fields/Dairy_Ideal_day_intake__c.field-meta.xml
<CustomField>
    <fullName>Dairy_Ideal_day_intake__c</fullName>
    <label>Dairy Ideal/day intake</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>