force-app/main/default/objects/Medical_Diagnosis__c/fields/DalsPulsesIdealdayintake__c.field-meta.xml
<CustomField>
    <fullName>DalsPulsesIdealdayintake__c</fullName>
    <label>Dals &amp; Pulses Ideal/day intake</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>