force-app/main/default/objects/Medical_Diagnosis__c/fields/Date_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Diagnosis__c</fullName>
    <label>Date of Diagnosis</label>
    <type>Date</type>
</CustomField>