force-app/main/default/objects/Medical_Diagnosis__c/fields/DiabeticStage__c.field-meta.xml
<CustomField>
    <fullName>DiabeticStage__c</fullName>
    <label>Diabetic Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diabetic</fullName>
            </value>
            <value>
                <fullName>Non-Diabetic</fullName>
            </value>
            <value>
                <fullName>Prediabetic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>