force-app/main/default/objects/Medical_Diagnosis__c/fields/DiabeticTreatment__c.field-meta.xml
<CustomField>
    <fullName>DiabeticTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DiabeticTreatment</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Nutrition Histories (DiabeticTreatment)</relationshipLabel>
    <relationshipName>Nutrition_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>