force-app/main/default/objects/Medical_Diagnosis__c/fields/Didthechildtrythesample__c.field-meta.xml
<CustomField>
    <fullName>Didthechildtrythesample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did the child try the sample?</label>
    <type>Checkbox</type>
</CustomField>