force-app/main/default/objects/Medical_Diagnosis__c/fields/Dietary_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Considerations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dietary Considerations</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Affiliate_Value__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Dietary Considerations</value>
        </filterItems>
        <filterItems>
            <field>Affiliate_Value__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Affiliate_Value__c</referenceTo>
    <relationshipName>Medical_Diagnosis</relationshipName>
    <type>Lookup</type>
</CustomField>