force-app/main/default/objects/Medical_Diagnosis__c/fields/Difficulties_to_move_around__c.field-meta.xml
<CustomField>
    <fullName>Difficulties_to_move_around__c</fullName>
    <inlineHelpText>Difficulties to move from a standing position to a seated position on the floor without any strain, difficulty or support.</inlineHelpText>
    <label>Difficulties to move around</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, easily</fullName>
            </value>
            <value>
                <fullName>Yes, with some difficulty</fullName>
            </value>
            <value>
                <fullName>Yes, with great difficulty</fullName>
            </value>
            <value>
                <fullName>No, not at all</fullName>
            </value>
            <value>
                <fullName>Don’t know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>