force-app/main/default/objects/Medical_Diagnosis__c/fields/DifficultiesInCarryingWeights__c.field-meta.xml
<CustomField>
    <fullName>DifficultiesInCarryingWeights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficulties in Carrying Weights</label>
    <type>Checkbox</type>
</CustomField>