force-app/main/default/objects/Medical_Diagnosis__c/fields/DifficultiesInClimbingStairs__c.field-meta.xml
<CustomField>
    <fullName>DifficultiesInClimbingStairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficulties in Climbing Stairs</label>
    <type>Checkbox</type>
</CustomField>