force-app/main/default/objects/Medical_Diagnosis__c/fields/DifficultiesInMovingFromChairBed__c.field-meta.xml
<CustomField>
    <fullName>DifficultiesInMovingFromChairBed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Difficulties in Moving from Chair/Bed</label>
    <type>Checkbox</type>
</CustomField>