force-app/main/default/objects/Medical_Diagnosis__c/fields/DoesmomknowbenefitsofSimilac__c.field-meta.xml
<CustomField>
    <fullName>DoesmomknowbenefitsofSimilac__c</fullName>
    <label>Does mom know benefits of Similac?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>核甘酸提升疫苗抗體反應</fullName>
            </value>
            <value>
                <fullName>HMO母乳寡糖幫助提升保護力</fullName>
            </value>
            <value>
                <fullName>益菌生幫助維持腸胃道健康</fullName>
            </value>
            <value>
                <fullName>不含棕櫚油</fullName>
            </value>
            <value>
                <fullName>不清楚</fullName>
            </value>
            <value>
                <fullName>其他(請註明)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>