force-app/main/default/objects/Medical_Diagnosis__c/fields/DoesmomknowbenefitsofTotalComfort__c.field-meta.xml
<CustomField>
    <fullName>DoesmomknowbenefitsofTotalComfort__c</fullName>
    <label>Does mom know benefits of Total Comfort?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>水解蛋白配方</fullName>
            </value>
            <value>
                <fullName>低適乳糖配方</fullName>
            </value>
            <value>
                <fullName>不清楚</fullName>
            </value>
            <value>
                <fullName>其他(請註明)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>