force-app/main/default/objects/Medical_Diagnosis__c/fields/DoestheChildHeightWeightfitage__c.field-meta.xml
<CustomField>
    <fullName>DoestheChildHeightWeightfitage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the Child Height/Weight fit age?</label>
    <type>Checkbox</type>
</CustomField>