force-app/main/default/objects/Medical_Diagnosis__c/fields/DoesYourChildCatchesColdCough__c.field-meta.xml
<CustomField>
    <fullName>DoesYourChildCatchesColdCough__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Your Child Catches Cold &amp; Cough?</label>
    <type>Checkbox</type>
</CustomField>