force-app/main/default/objects/Medical_Diagnosis__c/fields/Duration_of_Diabetes_Survey__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Diabetes_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duration of Diabetes(Survey)</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Nutrition Histories</relationshipLabel>
    <relationshipName>Nutrition_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>