force-app/main/default/objects/Medical_Diagnosis__c/fields/DurationofDiabetes__c.field-meta.xml
<CustomField>
    <fullName>DurationofDiabetes__c</fullName>
    <label>Duration of Diabetes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 3 months</fullName>
            </value>
            <value>
                <fullName>3 - 6 months</fullName>
            </value>
            <value>
                <fullName>7 - 12 months</fullName>
            </value>
            <value>
                <fullName>1-2 years</fullName>
            </value>
            <value>
                <fullName>2-4 years</fullName>
            </value>
            <value>
                <fullName>4 years +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>