force-app/main/default/objects/Medical_Diagnosis__c/fields/DurationSupplement__c.field-meta.xml
<CustomField>
    <fullName>DurationSupplement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DurationSupplement</label>
    <referenceTo>Survey_IN__c</referenceTo>
    <relationshipLabel>Nutrition Histories (DurationSupplement)</relationshipLabel>
    <relationshipName>Nutrition_Histories2</relationshipName>
    <type>Lookup</type>
</CustomField>