force-app/main/default/objects/Medical_Diagnosis__c/fields/EndUser__c.field-meta.xml
<CustomField>
    <fullName>EndUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nutrition Histories (End User)</relationshipLabel>
    <relationshipName>Nutrition_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>