force-app/main/default/objects/Medical_Diagnosis__c/fields/Energy_kcal__c.field-meta.xml
<CustomField>
    <fullName>Energy_kcal__c</fullName>
    <label>Energy (kcal)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>