force-app/main/default/objects/Medical_Diagnosis__c/fields/Fat__c.field-meta.xml
<CustomField>
    <fullName>Fat__c</fullName>
    <label>Fat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>