force-app/main/default/objects/Medical_Diagnosis__c/fields/FatsSugarsIdealdayintake__c.field-meta.xml
<CustomField>
    <fullName>FatsSugarsIdealdayintake__c</fullName>
    <label>Fats &amp; Sugars Ideal/day intake</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>