force-app/main/default/objects/Medical_Diagnosis__c/fields/Fever_in_the_last_12_months__c.field-meta.xml
<CustomField>
    <fullName>Fever_in_the_last_12_months__c</fullName>
    <label>Fever in the last 12 months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Regularly</fullName>
            </value>
            <value>
                <fullName>Often</fullName>
            </value>
            <value>
                <fullName>Always (Almost)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>