force-app/main/default/objects/Medical_Diagnosis__c/fields/FrequencytoconsumePediasureproducts__c.field-meta.xml
<CustomField>
    <fullName>FrequencytoconsumePediasureproducts__c</fullName>
    <label>Frequency to consume Pediasure products?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1天不到1次 (如: 2天1次…)</fullName>
            </value>
            <value>
                <fullName>1次</fullName>
            </value>
            <value>
                <fullName>2次</fullName>
            </value>
            <value>
                <fullName>3次及3次以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>