force-app/main/default/objects/Medical_Diagnosis__c/fields/Frequentheadache__c.field-meta.xml
<CustomField>
    <fullName>Frequentheadache__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frequent headache</label>
    <type>Checkbox</type>
</CustomField>