force-app/main/default/objects/Medical_Diagnosis__c/fields/FruitsVegetablesdayintake__c.field-meta.xml
<CustomField>
    <fullName>FruitsVegetablesdayintake__c</fullName>
    <label>Fruits &amp; Vegetables/day intake</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>