force-app/main/default/objects/Medical_Diagnosis__c/fields/HandgripStrengthScore__c.field-meta.xml
<CustomField>
    <fullName>HandgripStrengthScore__c</fullName>
    <label>Handgrip Strength Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>