force-app/main/default/objects/Medical_Diagnosis__c/fields/Have_you_ever_taken_ensure__c.field-meta.xml
<CustomField>
    <fullName>Have_you_ever_taken_ensure__c</fullName>
    <label>Have you ever taken ensure ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>