force-app/main/default/objects/Medical_Diagnosis__c/fields/Havealreadyopenedthesample__c.field-meta.xml
<CustomField>
    <fullName>Havealreadyopenedthesample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have already opened the sample?</label>
    <type>Checkbox</type>
</CustomField>